Bug 91960 - Attached presentation causes impress to crash
Summary: Attached presentation causes impress to crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta4
Keywords: bibisectRequest, regression
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-06-09 10:04 UTC by Marco Craveiro
Modified: 2016-10-25 19:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Presentation about the interior of Angola (7.82 MB, application/vnd.ms-powerpoint)
2015-06-09 10:04 UTC, Marco Craveiro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Craveiro 2015-06-09 10:04:24 UTC
Created attachment 116408 [details]
Presentation about the interior of Angola

When I try to open the attached presentation, Impress first works very slowly; then eventually I get sound, but after a few seconds it crashes.
Comment 1 Timur 2015-06-09 14:18:33 UTC
Reproduced a different problem: presentation works, but ESC crashes Impress. That started in LO 3.3. and cannot be reproduced in OO. Tested in Windows.

Problem signature:
  Problem Event Name:	APPCRASH
  Application Name:	soffice.bin
  Application Version:	4.5.0.0
  Application Timestamp:	5575aebd
  Fault Module Name:	KERNELBASE.dll
  Fault Module Version:	6.1.7601.18839
  Fault Module Timestamp:	553e88ab
  Exception Code:	00000000
  Exception Offset:	0000c42d
  OS Version:	6.1.7601.2.1.0.256.48
  Locale ID:	4122
  Additional Information 1:	f60f
  Additional Information 2:	f60f6ac6a969d2a616bf3766b7fb690b
  Additional Information 3:	1859
  Additional Information 4:	185941b0a63ebcc41967a4533ad0d581
Comment 2 raal 2015-06-09 15:39:29 UTC
I can confirm crash with Version: 5.1.0.0.alpha1+
Build ID: eb8c323d94bf13d4a373f88c6b932a97701c283b
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-05_00:59:00

No crash with LO 3.5 (linux), regression
Comment 3 Timur 2015-06-10 07:47:29 UTC
(In reply to raal from comment #2)
> I can confirm crash with Version: 5.1.0.0.alpha1+
Did you get a crash "after a few seconds" or "with ESC"? 
Please set to NEW after it's clear. 
> No crash with LO 3.5 (linux), regression
In case of that old version, I'd say "bibisectRequest" not possible, so "NotBibisectable".
Comment 4 raal 2015-06-10 08:01:54 UTC
(In reply to Timur from comment #3)
> (In reply to raal from comment #2)
> > I can confirm crash with Version: 5.1.0.0.alpha1+
> Did you get a crash "after a few seconds" or "with ESC"? 
> Please set to NEW after it's clear. 

IIRC "after a few seconds" 

> > No crash with LO 3.5 (linux), regression
> In case of that old version, I'd say "bibisectRequest" not possible, so
> "NotBibisectable".

This is the oldest version from bibisect repo 43all (https://wiki.documentfoundation.org/QA/HowToBibisect#Linux)
Comment 5 Michael Meeks 2015-06-13 16:50:38 UTC
It is possible that the VclPtr (with Noel's fixing) fixes this crash; unclear - please can you re-test with a very recent 5.0 inculding the fix ? =) I couldn't reproduce it at least.

Please bear in mind that pressing 'Escape' while running a PPS should indeed exit the app - but that is not a crash; just how PPS (packed up auto-presenting presentations) behave - they start, auto-run, and then on close exit ;-)

http://en.libreofficeforum.org/node/390

Please re-open if problems persist in 5.0; thanks !
Comment 6 Commit Notification 2015-06-13 16:52:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2d65e08c9f6e35875eed1a4eea3af614478b801

tdf#91960 presentation causes Impress crash

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-06-13 16:55:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a617461a77abaca69a335901c3e5d7b084cc73f&h=libreoffice-5-0

tdf#91960 presentation causes Impress crash

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 09:13:24 UTC Comment hidden (obsolete)