tdf#91960 presentation causes Impress crash

The SystenChildWindow in question is owned by ViewMediaShape
So I fixed ViewMediaShape to dispose the vcl objects it creates
correctly.
But it triggers another crash because a MediaWindowImpl child window was
not correctly disposed.
So I fixed that in MediaWindow,
but now, if I hit ESCAPE while playing the slideshow, the entire
application exits, which is obviously not desirable.

Change-Id: If4aebcb6e5824266c154416f7246d73c6cb3509c